--- a/web/app/themes/hello-theme-child/style.css
+++ b/web/app/themes/hello-theme-child/style.css
@@ -15,3 +15,39 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 /*
     Add your custom styles here
 */
+
+/*
+****   WooCommerce style customization   ****
+*/
+
+.woocommerce-checkout input[type=text],input[type=email],input[type=password],input[type=date]{
+    background: #FFFFFF;
+    border: 1px solid rgba(140, 143, 140, 0.25);
+    border-radius: 50px !important;
+}
+.edit-account input[type=text],input[type=email],input[type=password],input[type=date]{
+    background: #FFFFFF;
+    border: 1px solid rgba(140, 143, 140, 0.25);
+    border-radius: 50px !important;
+}
+.woocommerce-billing-fields > h3 {
+    display: none;
+}
+.woocommerce-checkout label{
+    font-family: Athletics;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px !important;
+    letter-spacing: 0.01em;
+    color: #002700;
+}
+.edit-account label {
+    font-family: Athletics;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.01em;
+    color: #002700;
+}
